Tar i bruk 'erAnnenforelderInformert' i endringssøknader i stedet for å arve fra førstegangssøknad. Utvider papirsøknad AP dto med feltet